<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".fragment.ParagraphFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple_700"
        android:gravity="start|center"
        android:paddingStart="10dp"
        android:text="@string/article_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="10dp"
            android:text="@string/article_subtitle"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/article"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoLink="web"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:text="@string/article_text" />

    </LinearLayout>


</LinearLayout>